fix: dark mode
In an attempt to test dark mode, because I use light mode on my system,
I had to make light mode use dark mode, and vice versa, I forgot to
revert this change.

--- a/src/main.css
+++ b/src/main.css
@@ -19,7 +19,7 @@
 }
 
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 	:root {
 		--bg: #242426;
 		--fg: #FFFFFF;
